# NativeCrash2Java

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/babyte/banativecrash/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/babyte/banativecrash/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/babyte/banativecrash/: ExampleUnitTest.kt
breakpad/: build.gradle  publish.gradle
breakpad/src/androidTest/java/com/babyte/breakpad/: ExampleInstrumentedTest.kt
breakpad/src/main/: AndroidManifest.xml
breakpad/src/main/cpp/: CMakeLists.txt  breakpad.cpp  config.h
breakpad/src/main/cpp/client/linux/crash_generation/: crash_generation_server.cc  crash_generation_server.h
breakpad/src/main/cpp/client/linux/dump_writer_common/: thread_info.h
breakpad/src/main/cpp/client/linux/handler/: exception_handler.cc  exception_handler.h  exception_handler_unittest.cc  minidump_descriptor.cc  minidump_descriptor.h
breakpad/src/main/cpp/client/linux/microdump_writer/: microdump_writer.cc  microdump_writer.h
breakpad/src/main/cpp/client/linux/minidump_whole_writer/: minidump_whole_track_extra_info.h  minidump_whole_track_writer.cc  minidump_whole_track_writer.h
breakpad/src/main/cpp/client/linux/minidump_writer/: linux_core_dumper.cc  linux_core_dumper.h  linux_dumper.cc  linux_dumper.h  linux_dumper_unittest_helper.cc  linux_ptrace_dumper.cc  linux_ptrace_dumper.h  linux_ptrace_dumper_unittest.cc  minidump_writer.cc  minidump_writer_unittest.cc
breakpad/src/main/cpp/common/: scoped_ptr.h
breakpad/src/main/cpp/common/android/testing/: pthread_fixes.h
breakpad/src/main/cpp/common/linux/: elf_core_dump_unittest.cc
breakpad/src/main/cpp/google_breakpad/common/: minidump_cpu_ppc.h  minidump_cpu_ppc64.h  minidump_exception_linux.h  minidump_exception_solaris.h  minidump_format.h
breakpad/src/main/cpp/google_breakpad/processor/: microdump.h  microdump_processor.h  minidump.h  process_result.h  process_state.h
breakpad/src/main/cpp/processor/: address_map_unittest.cc  exploitability_linux.cc  logging.cc  microdump_stackwalk.cc  minidump.cc  minidump_processor.cc  minidump_processor_unittest.cc  minidump_stackwalk.cc  minidump_unittest.cc  range_map_truncate_lower_unittest.cc  range_map_truncate_upper_unittest.cc  range_map_unittest.cc  stackwalk_common.cc  stackwalker_ppc.cc  stackwalker_ppc64.cc  stackwalker_x86.cc  synth_minidump.h  synth_minidump_unittest.cc
breakpad/src/main/cpp/processor/proto/: process_state.proto
breakpad/src/main/java/com/babyte/breakpad/: BaByteBreakpad.kt
breakpad/src/main/java/com/babyte/breakpad/callback/: NativeCrashCallback.kt
breakpad/src/main/java/com/babyte/breakpad/data/: CrashInfo.kt
breakpad/src/main/java/com/babyte/breakpad/utils/: ThreadDumpUtils.kt
breakpad/src/test/java/com/babyte/breakpad/: ExampleUnitTest.kt
doc/: 实现思路.pptx
gradle/wrapper/: gradle-wrapper.properties
